# finpilot-mcp

./: .env.example  .gitignore  A2A_INTEGRATION.md  LICENSE  README.md  pyproject.toml  run-stdio.sh
finpilot_mcp/: __init__.py  a2a_client.py  auth.py  client.py  config.py  constants.py  machine_id.py  orchestrator_client.py  server.py
scripts/: smoke_test.py
tests/: __init__.py  test_auth.py  test_orchestrator_integration.py  test_server.py
tests/e2e/: conftest.py  test_mcp_tools.py
